feat: 시간표 정보가 없는 노선 NULL 처리